<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <View
        android:id="@id/exo_controls_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent" />

    <FrameLayout
        android:id="@id/exo_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:layoutDirection="ltr">

        <LinearLayout
            android:id="@id/exo_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:layoutDirection="ltr"
            android:padding="10dp">

            <TextView
                android:id="@id/exo_position"
                style="@style/ExoStyledControls.TimeText.Position"
                android:textColor="?attr/colorPrimary"
                android:textSize="11sp" />

            <TextView
                style="@style/ExoStyledControls.TimeText.Separator"
                android:textColor="?attr/colorPrimary"
                android:textSize="11sp" />

            <TextView
                android:id="@id/exo_duration"
                style="@style/ExoStyledControls.TimeText.Duration"
                android:textColor="?attr/colorPrimary"
                android:textSize="11sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@id/exo_basic_controls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginBottom="4dp"
            android:layoutDirection="ltr"
            android:padding="4dp">

            <ImageButton
                android:id="@id/exo_settings"
                style="@style/ExoStyledControls.Button.Bottom.Settings"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/settings"
                android:padding="0dp"
                app:tint="?attr/colorPrimary" />

            <ImageButton
                android:id="@+id/exo_fullscreen"
                style="@style/ExoStyledControls.Button.Bottom.FullScreen"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/fullscreen"
                android:padding="0dp"
                android:visibility="visible"
                app:tint="?attr/colorPrimary" />

        </LinearLayout>

        <!--
        <HorizontalScrollView
            android:id="@id/exo_extra_controls_scroll_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:visibility="invisible">

            <LinearLayout
                android:id="@id/exo_extra_controls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layoutDirection="ltr">

                <ImageButton
                    android:id="@id/exo_overflow_hide"
                    style="@style/ExoStyledControls.Button.Bottom.OverflowHide" />

            </LinearLayout>

        </HorizontalScrollView>
        -->

    </FrameLayout>

    <androidx.media3.ui.DefaultTimeBar
        android:id="@id/exo_progress"
        style="@style/CustomTimeBar"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="2dp"
        android:paddingHorizontal="8dp" />

    <LinearLayout
        android:id="@id/exo_center_controls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:clipToPadding="false"
        android:gravity="center"
        android:layoutDirection="ltr"
        android:padding="24dp">

        <include layout="@layout/custom_player_control_rewind_button" />

        <ImageButton
            android:id="@id/exo_play_pause"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/play"
            android:padding="2dp"
            android:src="@drawable/exo_styled_controls_play"
            tools:ignore="PrivateResource" />

        <include layout="@layout/custom_player_control_ffwd_button" />

    </LinearLayout>

</merge>
